# client-server-ipc-communication-v2

./: .gitignore  CMakeLists.txt  README.md
include/: common.h  communication_api.h
include/client/: client.h  client_utils.h
include/server/: server.h  server_threads_handle.h  server_utils.h
src/: communication_api.c
src/client/: client.c  client_utils.c
src/server/: server.c  server_threads_handle.c  server_utils.c
